--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="views/search/search.js"></script>
   </head>
   <body ng-app="App">
   <ion-side-menus>
@@ -44,8 +45,7 @@
       </span> Find A City</ion-item>
         <ion-item class="item-icon-left" ui-sref="settings" menu-close>
       <span class="icon ion-ios-cog"></span>
-        Settings 
-      </ion-item>
+        Settings </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menus>
