--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
   <ion-side-menus>
     <ion-side-menu-content>
       <ion-nav-bar class="bar-positive">
-        <ion-nav-buttons side="left">
+        <ion-nav-buttons side="left" ng-controller="LeftMenuController">
           <button class="button button-clear" menu-toggle="left">
             <span class="icon ion-navicon"></span>
           </button>
@@ -40,12 +40,10 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item class="item-icon-left" ui-sref="search" menu-close>
-      <span class="icon ion-search">
-      </span> Find A City</ion-item>
-        <ion-item class="item-icon-left" ui-sref="settings" menu-close>
-      <span class="icon ion-ios-cog"></span>
-        Settings </ion-item>
+        <ion-item class="item-icon-left" ui-sref="search" menu-close><span class="icon ion-search"></span> Find A City</ion-item>
+        <ion-item class="item-icon-left" ui-sref="settings" menu-close><span class="icon ion-ios-cog"></span>Settings </ion-item>
+        <ion-item class="item-divider">Favorites</ion-item>
+        <ion-item class="item-icon-left" ui-sref="weather({city: location.city, lat: location.lat, lng: location.lng})" menu-close ng-repeat="location in locations"><span class="icon ion-ios-location"></span> {{location.city}}</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menus>
