--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <script src="js/app.js"></script>
     <script src="views/search/search.js"></script>
     <script src="views/settings/settings.js"></script>
+    <script src="views/weather/weather.js"></script>
   </head>
   <body ng-app="App">
   <ion-side-menus>
