collection repeat sunrise sunset

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <script src="views/weather/weather.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="lib/moment-timezone/builds/moment-timezone-with-data.js"></script>
+    <script src="lib/suncalc/suncalc.js"></script>
   </head>
   <body ng-app="App">
   <ion-side-menus>
